--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="usO-ye-ejc">
-    <device id="retina5_9" orientation="portrait">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -10,29 +10,29 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Record Sounds View Controller-->
+        <!--Pitch Perfect-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="RecordSoundsViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yPW-2S-RRH">
-                                <rect key="frame" x="110" y="328.66666666666669" width="155" height="155"/>
+                                <rect key="frame" x="82.5" y="162.5" width="155" height="155"/>
                                 <state key="normal" image="Record"/>
                                 <connections>
                                     <action selector="recordAudio:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ssh-lU-6NQ"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to record" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Czr-l7-8Qy">
-                                <rect key="frame" x="136.66666666666666" y="491.66666666666669" width="102" height="21.000000000000057"/>
+                                <rect key="frame" x="109" y="325.5" width="102" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tLK-oF-RFP">
-                                <rect key="frame" x="155.66666666666666" y="576.66666666666663" width="64" height="64"/>
+                                <rect key="frame" x="128" y="400" width="64" height="64"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="64" id="fQH-8s-mMy"/>
                                     <constraint firstAttribute="width" constant="64" id="r7g-kN-chr"/>
@@ -46,15 +46,35 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="tLK-oF-RFP" firstAttribute="centerX" secondItem="Czr-l7-8Qy" secondAttribute="centerX" id="0nQ-UT-zrr"/>
-                            <constraint firstItem="tLK-oF-RFP" firstAttribute="top" secondItem="Czr-l7-8Qy" secondAttribute="bottom" constant="64" id="A39-bi-su0"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="tLK-oF-RFP" secondAttribute="trailing" constant="208" id="6RJ-Pc-Flt">
+                                <variation key="heightClass=compact" constant="16"/>
+                            </constraint>
+                            <constraint firstItem="tLK-oF-RFP" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="AwA-lA-TA2"/>
                             <constraint firstItem="yPW-2S-RRH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="AwK-Qf-TxG"/>
                             <constraint firstItem="Czr-l7-8Qy" firstAttribute="centerX" secondItem="yPW-2S-RRH" secondAttribute="centerX" id="MZz-xq-3po"/>
                             <constraint firstItem="Czr-l7-8Qy" firstAttribute="top" secondItem="yPW-2S-RRH" secondAttribute="bottom" constant="8" id="OKY-tB-k5Y"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="tLK-oF-RFP" secondAttribute="bottom" constant="16" id="akq-9O-DpC"/>
                             <constraint firstItem="yPW-2S-RRH" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="fsP-4L-7tm"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="6RJ-Pc-Flt"/>
+                                <exclude reference="AwA-lA-TA2"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="constraints">
+                                <include reference="6RJ-Pc-Flt"/>
+                                <exclude reference="akq-9O-DpC"/>
+                                <exclude reference="0nQ-UT-zrr"/>
+                                <include reference="AwA-lA-TA2"/>
+                            </mask>
+                        </variation>
                     </view>
-                    <navigationItem key="navigationItem" id="Svr-kV-v6C"/>
+                    <navigationItem key="navigationItem" title="Pitch Perfect" id="Svr-kV-v6C">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="5WL-tk-2h6"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="recordButton" destination="yPW-2S-RRH" id="T0P-q8-6Ru"/>
                         <outlet property="recordingLabel" destination="Czr-l7-8Qy" id="hot-1S-deu"/>
@@ -66,29 +86,29 @@
             </objects>
             <point key="canvasLocation" x="860" y="118.29085457271366"/>
         </scene>
-        <!--Play Sounds View Controller-->
+        <!--Soundbar-->
         <scene sceneID="s1d-bk-GgG">
             <objects>
                 <viewController id="ZMI-Gl-ptz" customClass="PlaySoundsViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nJY-sk-9Ie">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="N00-KX-X1i">
-                                <rect key="frame" x="16" y="88" width="343" height="602"/>
+                                <rect key="frame" x="16" y="64" width="288" height="328"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="GSO-g6-bkm">
-                                        <rect key="frame" x="0.0" y="0.0" width="343" height="200.66666666666666"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="288" height="109.5"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xvE-2b-aVE" userLabel="Snail Button">
-                                                <rect key="frame" x="0.0" y="0.0" width="171.66666666666666" height="200.66666666666666"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="144" height="109.5"/>
                                                 <state key="normal" image="Slow"/>
                                                 <connections>
                                                     <action selector="playSoundForButton:" destination="ZMI-Gl-ptz" eventType="touchUpInside" id="OCU-Om-4dI"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f5N-yJ-iYJ" userLabel="Rabbit Button">
-                                                <rect key="frame" x="171.66666666666663" y="0.0" width="171.33333333333337" height="200.66666666666666"/>
+                                                <rect key="frame" x="144" y="0.0" width="144" height="109.5"/>
                                                 <state key="normal" image="Fast"/>
                                                 <connections>
                                                     <action selector="playSoundForButton:" destination="ZMI-Gl-ptz" eventType="touchUpInside" id="bwV-7O-oE2"/>
@@ -97,17 +117,17 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="OmL-Th-pb1">
-                                        <rect key="frame" x="0.0" y="200.66666666666669" width="343" height="200.66666666666669"/>
+                                        <rect key="frame" x="0.0" y="109.5" width="288" height="109"/>
                                         <subviews>
                                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lor-Ex-nNQ" userLabel="High PitchButton">
-                                                <rect key="frame" x="0.0" y="0.0" width="171.66666666666666" height="200.66666666666666"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="144" height="109"/>
                                                 <state key="normal" image="HighPitch"/>
                                                 <connections>
                                                     <action selector="playSoundForButton:" destination="ZMI-Gl-ptz" eventType="touchUpInside" id="G0e-bJ-DGf"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iJd-Rs-azk" userLabel="Low Pitch Button">
-                                                <rect key="frame" x="171.66666666666663" y="0.0" width="171.33333333333337" height="200.66666666666666"/>
+                                                <rect key="frame" x="144" y="0.0" width="144" height="109"/>
                                                 <state key="normal" image="LowPitch"/>
                                                 <connections>
                                                     <action selector="playSoundForButton:" destination="ZMI-Gl-ptz" eventType="touchUpInside" id="3GF-YR-e5O"/>
@@ -116,17 +136,17 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="xLl-hf-iEW">
-                                        <rect key="frame" x="0.0" y="401.33333333333331" width="343" height="200.66666666666669"/>
+                                        <rect key="frame" x="0.0" y="218.5" width="288" height="109.5"/>
                                         <subviews>
                                             <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k1n-pS-8oC" userLabel="Echo Button">
-                                                <rect key="frame" x="0.0" y="0.0" width="171.66666666666666" height="200.66666666666666"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="144" height="109.5"/>
                                                 <state key="normal" image="Echo"/>
                                                 <connections>
                                                     <action selector="playSoundForButton:" destination="ZMI-Gl-ptz" eventType="touchUpInside" id="fur-G3-8AL"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tEe-aQ-5V0" userLabel="Reverb Button">
-                                                <rect key="frame" x="171.66666666666663" y="0.0" width="171.33333333333337" height="200.66666666666666"/>
+                                                <rect key="frame" x="144" y="0.0" width="144" height="109.5"/>
                                                 <state key="normal" image="Reverb"/>
                                                 <connections>
                                                     <action selector="playSoundForButton:" destination="ZMI-Gl-ptz" eventType="touchUpInside" id="seO-zw-AfQ"/>
@@ -137,7 +157,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q4R-eM-9fG" userLabel="Stop Button">
-                                <rect key="frame" x="155.66666666666666" y="698" width="64" height="64"/>
+                                <rect key="frame" x="128" y="400" width="64" height="64"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="64" id="HaY-FN-SMw"/>
                                     <constraint firstAttribute="height" constant="64" id="v9u-hS-KLJ"/>
@@ -159,6 +179,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="wx6-Pg-NaF"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Soundbar" id="diW-Sg-rwU">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="Hd2-tP-uTJ"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="echoButton" destination="k1n-pS-8oC" id="Spy-Wm-qZg"/>
                         <outlet property="highButton" destination="Lor-Ex-nNQ" id="0gw-vU-o6S"/>
@@ -179,7 +202,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="usO-ye-ejc" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="jNa-2V-td9">
-                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
